--- a/inventory-service/inventory-service/src/main/resources/application.properties
+++ b/inventory-service/inventory-service/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.username=root
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 server.port=8082
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.api-docs.path=/api-docs
